<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_marginBottom="24dp" />
    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/full_name"
        android:layout_marginTop="12dp"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text" />
    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:hint="@string/username"
        android:layout_marginTop="12dp"
        android:inputType="text"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text" />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="12dp"
        android:padding="12dp"
        android:background="@drawable/rounded_edit_text" />
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_marginTop="20dp"
        android:backgroundTint="#6200EE"
        android:textColor="#FFFFFF" />
</LinearLayout>